--- a/client/src/components/sidebar/Sidebar.scss
+++ b/client/src/components/sidebar/Sidebar.scss
@@ -1,14 +1,48 @@
 @import '../../style/mixins.scss';
+@import '../../style/breakpoints.scss';
+
 
 .entire-sidebar{
     position: fixed;
     top: 0;
     left: 0;
     
-    width: 17%;
-    height: 100vh;
-    border-right:1px solid gray ;
+    @include sm(){
+        width: 9%;
+        height: 100vh;
+        border-right:1px solid gray ;
+        background-color: aqua;
+        span{
+            visibility: collapse;
+        }
+    }
 
+    
+    @include md(){
+        width: 14%;
+        height: 100vh;
+        border-right:1px solid gray ;
+        background-color: red;
+        span{
+            visibility: visible;
+            // font-size: 0.6em;
+            font-size: 60%;
+
+        }
+    }
+
+    @include lg(){
+        width: 17%;
+        height: 100vh;
+        border-right:1px solid gray ;
+        background-color: blue;
+        span{
+            visibility: visible;
+            // font-size: 0.9em;
+            font-size: 100%;
+        }
+    }
+    
     // ? Split the icons with authlist
     display: flex;
     flex-direction: column;
@@ -54,6 +88,9 @@
             display: flex;
             flex-direction: row;
             align-items: center;
+            @include sm(){
+                background-color: aquamarine;
+            }
             span{
                 margin-left: 0.1em;
                 text-align: center;
@@ -171,25 +208,5 @@
 
 
         }
-
-
-
-        // .btn-logout{
-        //     @include btn();
-            
-        //     background-color: var(--danger-color);
-        //     color: var(--text-light-color);
-        //     margin-left: 3.2rem;
-        //     p{
-        //         margin: 0;
-        //         display: flex;
-        //         justify-content: center;
-        //         flex-direction: column;
-        //         color: var(--text-light-color);
-                
-        //     }
-        // }
     }
-
-    
 }
