--- a/client/src/components/sidebar/Sidebar.scss
+++ b/client/src/components/sidebar/Sidebar.scss
@@ -1,19 +1,45 @@
 @import '../../style/mixins.scss';
 @import '../../style/breakpoints.scss';
 
-
+// ? Holds the entire CSS
 .entire-sidebar{
+    // Position the sidebar
     position: fixed;
     top: 0;
     left: 0;
-    
+    display: flex;
+    flex-direction: column;
+
+    border-right:1px solid gray;
+
+    // * Annotate for other sizes
     @include sm(){
+        // Size for a small sidebar
         width: 9%;
-        height: 100vh;
-        border-right:1px solid gray ;
-        background-color: aqua;
-        span{
-            visibility: collapse;
+        height: 100vh;    
+        
+
+        background-color: green;
+        justify-content: space-between;
+
+        // Home, Profile, and Tweet
+        .sidebar-interactive{
+            background-color: pink;
+            
+            .icons{
+                // hide the text of the icons
+                span{
+                    visibility: collapse;
+                }
+
+            }
+        }
+        
+
+        // Authlist(Sign up/Sign in) div section
+        .sidebar-authlist{
+            background-color: red;
+            height: 20%;
         }
     }
 
@@ -42,171 +68,192 @@
             font-size: 100%;
         }
     }
-    
-    // ? Split the icons with authlist
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    // * Home, Explore,..., Tweet
-    .sidebar-icons{
-        btn{
-            @include btn();
-        }
-        div:first-child{
-            margin-top: 0.6em;
-        } 
-        .sidebar-bird{
-            color: #1d9bf0;
-            font-size: 1.3em;
-        }
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        
-        position: relative;
-        left: 7%;
-        right: 7%;
-
-        font-size: 1.3em;
-        .home-link,
-        .profile-link{
-            text-decoration: none;
-            border-radius: 10px;
-            &:hover{
-                // box-shadow: var(--box-shadow);
-                box-shadow: var(--box-shadow)
-            }
-        }
-        
-        p{
-            margin-top: 1.5rem;
-            display: flex;
-            justify-content: center;
-            color: var(--text-dark-color);
-            text-decoration: none;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            @include sm(){
-                background-color: aquamarine;
-            }
-            span{
-                margin-left: 0.1em;
-                text-align: center;
-            }
-        }
-
-        
-
-        .sidebar-tweet-div{
-            .sidebar-tweet-btn{
-                @include btn();
-                width: 7.3em;
-                height: 1.9em;
-                background-color: #1d9bf0;
-                color: white;
-                border-radius: 20px;
-                font-size: 1.3rem;
-                padding: 7px 7px 7px 7px;
-            }
-        }
-    }
-    
-    // ^ Log out button || Display username
-    .sidebar-authlist{
-        height: 25%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        
-        align-items: center;
-
-        .register-area{
-            
-            p{
-                margin-left: 2.5em;
-                font-weight: 500;
-                font-size: 0.95em;
-                margin-bottom: 0.7em;
-            }
-            .register{
-                @include btn();
-                border-radius: 20px;
-                background-color: #1d9bf0;
-                color: white;
-                text-decoration: none;
-
-            }
-        }
-
-        .login-area{
-            
-            
-            p{
-                font-weight: 500;
-                font-size: 0.95em;
-                margin-bottom: 0.7em;
-            }
-            .login{
-                @include btn();
-                border-radius: 20px;
-                margin-left: 3em;
-                background-color: white;
-                border: 0.2px gray solid;
-                color: #1d9bf0;
-                text-decoration: none;
-            }
-        }
-        
-        // * Assume we are using row(default)
-        // ? Justify-content: alignment of the x axis
-        // ? Align-items: alignment of the y axis
-        // ? Align-content: ONLY APPLIES IF MORE THAN ONE ROW [Kinda useless]?
-
-
-        // * Display basic user info when they are logged in
-        .log-out-area{
-            
-            height: 100%;
-            width: 100%;
-            display: flex;
-            align-items: flex-end;
-
-            .mini-user-area{
-                display: flex;
-                flex-direction: row;
-                margin-left: 1em;
-                margin-bottom: 1em;
-
-                .mini-pfp{
-                    img{
-                        border-radius: 50%;
-                        width: 2.5em;
-                        height: 90%;
-                        margin-right: 0.4em;
-                    }
-                }
-                .mini-user-info{
-                    display: flex;
-                    flex-direction: column;
-                    .username-section{
-                        span{
-                            color: #a1cee0;
-                        }
-                    }
-
-                    .mini-logout{
-                        @include btn();
-                        margin-top: 0.3em;
-                        border: 1px solid #a1cee0;
-                        border-radius: 20px;
-                        
-                    }
-                }
-            }
-
-
-        }
-    }
 }
+    
+    // // ? Split the icons with authlist
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-between;
+
+    // // * Home, Explore,..., Tweet
+    // .sidebar-icons{
+
+    //     btn{
+    //         @include btn();
+    //     }
+        
+    //     // Barbter Icon
+    //     div:first-child{
+    //         margin-top: 0.6em;
+    //     } 
+        
+    //     // Barbter Icon
+    //     .sidebar-bird{
+    //         color: #1d9bf0;
+    //         font-size: 1.3em;
+    //     }
+        
+    //     // Make the icons a column and position them
+    //     display: flex;
+    //     flex-direction: column;
+    //     align-items: flex-start;
+        
+    //     position: relative;
+    //     left: 7%;
+    //     right: 7%;
+
+    //     // Standardized Them to one font
+    //     font-size: 1.3em;
+        
+    //     .home-link,
+    //     .profile-link{
+    //         text-decoration: none;
+    //         border-radius: 10px;
+    //         &:hover{
+    //             // box-shadow: var(--box-shadow);
+    //             box-shadow: var(--box-shadow)
+    //         }
+    //     }
+        
+    //     // All the icons below Barbter Icon
+    //     p{
+    //         margin-top: 1.5rem;
+            
+    //         display: flex;
+    //         justify-content: center;
+    //         color: var(--text-dark-color);
+    //         text-decoration: none;
+    //         display: flex;
+    //         flex-direction: row;
+    //         align-items: center;
+            
+    //         // NEEDED FOR THE ICONS
+    //         @include sm(){
+    //             background-color: red;
+    //             width: 30%;
+                
+    //             span{
+    //                 visibility: collapse;
+    //             }
+    //         }
+
+            
+
+    //         span{
+    //             margin-left: 0.1em;
+    //             text-align: center;
+    //         }
+    //     }
+
+        
+
+    //     .sidebar-tweet-div{
+    //         .sidebar-tweet-btn{
+    //             @include btn();
+    //             width: 7.3em;
+    //             height: 1.9em;
+    //             background-color: #1d9bf0;
+    //             color: white;
+    //             border-radius: 20px;
+    //             font-size: 1.3rem;
+    //             padding: 7px 7px 7px 7px;
+    //         }
+    //     }
+    // }
+    
+    // // ^ Log out button || Display username
+    // .sidebar-authlist{
+    //     height: 25%;
+    //     display: flex;
+    //     flex-direction: column;
+    //     justify-content: space-around;
+        
+    //     align-items: center;
+
+    //     .register-area{
+            
+    //         p{
+    //             margin-left: 2.5em;
+    //             font-weight: 500;
+    //             font-size: 0.95em;
+    //             margin-bottom: 0.7em;
+    //         }
+    //         .register{
+    //             @include btn();
+    //             border-radius: 20px;
+    //             background-color: #1d9bf0;
+    //             color: white;
+    //             text-decoration: none;
+
+    //         }
+    //     }
+
+    //     .login-area{
+            
+            
+    //         p{
+    //             font-weight: 500;
+    //             font-size: 0.95em;
+    //             margin-bottom: 0.7em;
+    //         }
+    //         .login{
+    //             @include btn();
+    //             border-radius: 20px;
+    //             margin-left: 3em;
+    //             background-color: white;
+    //             border: 0.2px gray solid;
+    //             color: #1d9bf0;
+    //             text-decoration: none;
+    //         }
+    //     }
+        
+    //     // * Assume we are using row(default)
+    //     // ? Justify-content: alignment of the x axis
+    //     // ? Align-items: alignment of the y axis
+    //     // ? Align-content: ONLY APPLIES IF MORE THAN ONE ROW [Kinda useless]?
+
+
+    //     // * Display basic user info when they are logged in
+    //     .log-out-area{
+            
+    //         height: 100%;
+    //         width: 100%;
+    //         display: flex;
+    //         align-items: flex-end;
+
+    //         .mini-user-area{
+    //             display: flex;
+    //             flex-direction: row;
+    //             margin-left: 1em;
+    //             margin-bottom: 1em;
+
+    //             .mini-pfp{
+    //                 img{
+    //                     border-radius: 50%;
+    //                     width: 2.5em;
+    //                     height: 90%;
+    //                     margin-right: 0.4em;
+    //                 }
+    //             }
+    //             .mini-user-info{
+    //                 display: flex;
+    //                 flex-direction: column;
+    //                 .username-section{
+    //                     span{
+    //                         color: #a1cee0;
+    //                     }
+    //                 }
+
+    //                 .mini-logout{
+    //                     @include btn();
+    //                     margin-top: 0.3em;
+    //                     border: 1px solid #a1cee0;
+    //                     border-radius: 20px;
+                        
+    //                 }
+    //             }
+    //         }
+
+
+    //     }
+    // }
